--- a/src/Tester/.classpath
+++ b/src/Tester/.classpath
@@ -3,31 +3,31 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Timbrados"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/gson-2.6.2.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.activation-api-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.annotation-api-1.3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.inject-2.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.json.bind-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.json-1.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.json-api-1.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.persistence-api-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.servlet-api-4.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.ws.rs-api-2.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.ws.rs-api-2.1.5-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jakarta.xml.bind-api-2.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/javassist-3.22.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-client.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-common.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-container-servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-container-servlet-core.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-hk2.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-media-jaxb.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-media-json-binding.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-media-sse.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/jersey-server.jar"/>
-	<classpathentry kind="lib" path="C:/Alejandro/JavaDllConsumirApiRest/Tester/lib/facturoporti.api.cfdi-1.0.jar" sourcepath="/FacturoPorTi.Api.Cfdi/src"/>
 	<classpathentry kind="lib" path="lib/hk2-api-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/hk2-locator-2.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/hk2-utils-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/facturoporti.api.cfdi-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.activation-api-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.annotation-api-1.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.inject-2.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.json-1.1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.json-api-1.1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.json.bind-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.persistence-api-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.servlet-api-4.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.ws.rs-api-2.1.5-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.ws.rs-api-2.1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.22.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-hk2.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-media-json-binding.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-media-sse.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-server.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
